--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0093.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0093.html
@@ -42,8 +42,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 699 283 835 327">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 869 283 951 327">
@@ -141,7 +140,7 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1586 357 1681 412" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Διί,</ins>
+            <ins title="nlp 2.00">Διΐ,</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 1712 356 1988 412" lang="grc">
@@ -225,8 +224,7 @@
         </span>
         <span id="w_39" class="ocr_word" title="bbox 1371 500 1483 552">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dicU,</ins>
-            <del title="nlp 0.90">dicU,</del>
+            <ins title="nlp 2.00">dicit,</ins>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1503 500 1575 555">
@@ -237,8 +235,7 @@
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1606 498 1839 554">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">adfxrmant</ins>
-            <del title="nlp 0.90">adfxrmant</del>
+            <ins title="nlp 2.00">adfirmant</ins>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 1869 512 1989 542">
@@ -268,8 +265,7 @@
         </span>
         <span id="w_47" class="ocr_word" title="bbox 814 572 1041 626">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">firtnaiwn,</ins>
-            <del title="nlp 0.90">firtnaiwn,</del>
+            <ins title="nlp 2.00">firmatum,</ins>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 1075 573 1290 626">
@@ -322,8 +318,7 @@
         </span>
         <span id="w_56" class="ocr_word" title="bbox 733 643 870 686">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 898 642 982 686">
@@ -585,8 +580,7 @@
       <span class="ocr_line" title="bbox 357 999 1989 1058">
         <span id="w_102" class="ocr_word" title="bbox 357 1002 635 1045">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">PhilodemuB</ins>
-            <del title="nlp 0.90">PhilodemuB</del>
+            <ins title="nlp 2.00">Philodemus</ins>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 667 1000 767 1058" lang="grc">
@@ -612,8 +606,7 @@
         </span>
         <span id="w_107" class="ocr_word" title="bbox 1126 999 1276 1057">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Qomp.</ins>
-            <del title="nlp 0.90">Qomp.</del>
+            <ins title="nlp 2.00">Gomp.</ins>
           </span>
         </span>
         <span id="w_108" class="ocr_word" title="bbox 1326 1002 1486 1053" lang="grc">
@@ -707,7 +700,7 @@
       <span class="ocr_line" title="bbox 362 1143 1989 1201">
         <span id="w_126" class="ocr_word" title="bbox 362 1145 453 1189">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">166</ins>
+            <ins title="nlp 2.00">165</ins>
           </span>
         </span>
         <span id="w_127" class="ocr_word" title="bbox 486 1145 633 1189">
@@ -751,9 +744,14 @@
             <del title="nlp 0.90">idetn</del>
           </span>
         </span>
-        <span id="w_134" class="ocr_word" title="bbox 1302 1146 1455 1201" lang="grc">
+        <span id="w_134_0" class="ocr_word" title="bbox 1302 1146 1455 1201">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ζενο)</ins>
+            <ins class="alt" title="nlp 2.00">(Zeno)</ins>
+          </span>
+        </span>
+        <span id="w_134_1" class="ocr_word" title="bbox 1302 1146 1455 1201">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 1487 1146 1614 1188">
@@ -777,12 +775,6 @@
         <span id="w_138" class="ocr_word" title="bbox 1889 1143 1937 1198" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">(i</ins>
-          </span>
-        </span>
-        <span id="w_139" class="ocr_word" title="bbox 1956 1158 1989 1187">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">e.</ins>
-            <del title="nlp 0.90">e.</del>
           </span>
         </span>
       </span>
@@ -913,8 +905,7 @@
         </span>
         <span id="w_161" class="ocr_word" title="bbox 2013 1303 2045 1330">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">n</ins>
-            <del title="nlp 0.90">n</del>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -1089,8 +1080,7 @@
         </span>
         <span id="w_190" class="ocr_word" title="bbox 1957 1507 1995 1546">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ct</ins>
-            <del title="nlp 0.90">ct</del>
+            <ins title="nlp 2.00">et</ins>
           </span>
         </span>
       </span>
@@ -1205,8 +1195,7 @@
         </span>
         <span id="w_210" class="ocr_word" title="bbox 595 1722 700 1765">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">toUit</ins>
-            <del title="nlp 0.90">toUit</del>
+            <ins title="nlp 2.00">tollit</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 747 1723 917 1765">
@@ -1310,8 +1299,7 @@
         </span>
         <span id="w_227" class="ocr_word" title="bbox 333 1866 570 1921">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">appeUetur,</ins>
-            <del title="nlp 0.90">appeUetur,</del>
+            <ins title="nlp 2.00">appelletur,</ins>
           </span>
         </span>
         <span id="w_228" class="ocr_word" title="bbox 601 1867 650 1909">
@@ -1356,15 +1344,14 @@
             <del title="nlp 0.90">inanimis</del>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 1717 1867 1837 1919" lang="grc">
+        <span id="w_235_0" class="ocr_word" title="bbox 1717 1867 1837 1919">
           <span class="alternatives">
-            <ins title="nlp 2.00">qtque</ins>
+            <ins class="alt" title="nlp 2.00">atque</ins>
           </span>
         </span>
-        <span id="w_236" class="ocr_word" title="bbox 1867 1863 1995 1906">
+        <span id="w_235_1" class="ocr_word" title="bbox 1717 1867 1837 1919">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">muiis</ins>
-            <del title="nlp 0.90">muiis</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1398,8 +1385,7 @@
         </span>
         <span id="w_242" class="ocr_word" title="bbox 1237 1937 1392 1981">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tribwta</ins>
-            <del title="nlp 0.90">tribwta</del>
+            <ins title="nlp 2.00">tributa</ins>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 1423 1938 1608 1980">
@@ -1448,24 +1434,29 @@
             <del title="nlp 0.90">(DDG</del>
           </span>
         </span>
-        <span id="w_251" class="ocr_word" title="bbox 1528 2006 1685 2066">
+        <span id="w_251_0" class="ocr_word" title="bbox 1528 2006 1685 2066">
           <span class="alternatives">
-            <ins title="nlp 2.00">(DDG 542b).</ins>
+            <ins class="alt" title="nlp 2.00">542b).</ins>
           </span>
         </span>
-        <span id="w_252" class="ocr_word" title="bbox 1734 2032 1882 2038">
+        <span id="w_251_1" class="ocr_word" title="bbox 1528 2006 1685 2066">
           <span class="alternatives">
-            <ins title="nlp 2.00">—  —</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_252_0" class="ocr_word" title="bbox 1734 2032 1882 2038">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
+          </span>
+        </span>
+        <span id="w_252_1" class="ocr_word" title="bbox 1734 2032 1882 2038">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 1913 2022 1994 2062" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_254" class="ocr_word" title="bbox 2014 2023 2046 2049">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">25</ins>
           </span>
         </span>
       </span>
@@ -1477,7 +1468,7 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 614 2079 848 2139" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δ)ύναμιν</ins>
+            <ins title="nlp 2.00">(δ)ύναμιν</ins>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 879 2094 1020 2125" lang="grc">
@@ -1512,14 +1503,24 @@
             <ins class="alt" title="nlp 1.00">πρὸ(ς</ins>
           </span>
         </span>
-        <span id="w_263" class="ocr_word" title="bbox 416 2152 602 2210" lang="grc">
+        <span id="w_263_0" class="ocr_word" title="bbox 416 2152 602 2210">
           <span class="alternatives">
-            <ins title="nlp 2.00">ε)λληλα</ins>
+            <ins class="alt" title="nlp 2.00">ἄ)λληλα</ins>
           </span>
         </span>
-        <span id="w_265" class="ocr_word" title="bbox 744 2153 790 2196" lang="grc">
+        <span id="w_263_1" class="ocr_word" title="bbox 416 2152 602 2210">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκ</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_265_0" class="ocr_word" title="bbox 744 2153 790 2196">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_265_1" class="ocr_word" title="bbox 744 2153 790 2196">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐκ</ins>
           </span>
         </span>
         <span id="w_266" class="ocr_word" title="bbox 811 2187 820 2196">
@@ -1552,9 +1553,14 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_273" class="ocr_word" title="bbox 1234 2152 1318 2197" lang="grc">
+        <span id="w_273_0" class="ocr_word" title="bbox 1234 2152 1318 2197">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ’ ἀνα</ins>
+            <ins class="alt" title="nlp 2.00">δ᾿</ins>
+          </span>
+        </span>
+        <span id="w_273_1" class="ocr_word" title="bbox 1234 2152 1318 2197">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀνα</ins>
           </span>
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1338 2187 1347 2196">
@@ -1604,8 +1610,7 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1732 2152 1806 2194">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xccl</ins>
-            <del title="nlp 0.90">xccl</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1848 2166 1905 2194" lang="grc">
@@ -1619,11 +1624,6 @@
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 1953 2183 1963 2193">
-          <span class="alternatives">
-            <ins title="nlp 2.00">.</ins>
-          </span>
-        </span>
-        <span id="w_287" class="ocr_word" title="bbox 1983 2183 1994 2193">
           <span class="alternatives">
             <ins title="nlp 2.00">.</ins>
           </span>
@@ -1704,14 +1704,17 @@
       <span class="ocr_line" title="bbox 244 2367 2049 2424">
         <span id="w_301" class="ocr_word" title="bbox 244 2370 447 2413">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ivmnem</ins>
-            <del title="nlp 0.90">Ivmnem</del>
+            <ins title="nlp 2.00">Ιunonem</ins>
           </span>
         </span>
-        <span id="w_302" class="ocr_word" title="bbox 478 2383 590 2422">
+        <span id="w_302_0" class="ocr_word" title="bbox 478 2383 590 2422">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aera,</ins>
-            <del title="nlp 0.90">aera,</del>
+            <ins class="alt" title="nlp 2.00">aera,</ins>
+          </span>
+        </span>
+        <span id="w_302_1" class="ocr_word" title="bbox 478 2383 590 2422">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Iovem</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 622 2369 760 2413" lang="grc">
@@ -1757,8 +1760,7 @@
         </span>
         <span id="w_310" class="ocr_word" title="bbox 2014 2382 2049 2409">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">m</ins>
-            <del title="nlp 0.90">m</del>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
@@ -1777,8 +1779,7 @@
         </span>
         <span id="w_313" class="ocr_word" title="bbox 483 2442 678 2485">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">simUiter</ins>
-            <del title="nlp 0.90">simUiter</del>
+            <ins title="nlp 2.00">similiter</ins>
           </span>
         </span>
         <span id="w_314" class="ocr_word" title="bbox 706 2441 820 2496">
@@ -1795,8 +1796,7 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 969 2441 1165 2484">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dementa</ins>
-            <del title="nlp 0.90">dementa</del>
+            <ins title="nlp 2.00">elementa</ins>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1190 2454 1273 2486">
@@ -1813,8 +1813,7 @@
         </span>
         <span id="w_319" class="ocr_word" title="bbox 1609 2439 1823 2495">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">puMicum</ins>
-            <del title="nlp 0.90">puMicum</del>
+            <ins title="nlp 2.00">publicum</ins>
           </span>
         </span>
         <span id="w_320" class="ocr_word" title="bbox 1855 2439 1997 2494">
@@ -1899,7 +1898,7 @@
         </span>
         <span id="w_334" class="ocr_word" title="bbox 1791 2580 1995 2640" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγ)ους</ins>
+            <ins title="nlp 2.00">(λόγ)ους</ins>
           </span>
         </span>
       </span>
@@ -1979,14 +1978,14 @@
             <del title="nlp 0.90">B</del>
           </span>
         </span>
-        <span id="w_349" class="ocr_word" title="bbox 1321 2843 1387 2888">
+        <span id="w_349_0" class="ocr_word" title="bbox 1321 2843 1387 2888">
           <span class="alternatives">
-            <ins title="nlp 2.00">διΐ,</ins>
+            <ins class="alt" title="nlp 2.00">διΐ,</ins>
           </span>
         </span>
-        <span id="w_350" class="ocr_word" title="bbox 1411 2843 1431 2880" lang="grc">
+        <span id="w_349_1" class="ocr_word" title="bbox 1321 2843 1387 2888">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΐ</ins>
+            <ins class="alt" title="nlp 2.00">ΐ</ins>
           </span>
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1451 2845 1490 2880">
@@ -2001,14 +2000,9 @@
             <del title="nlp 0.90">lit.</del>
           </span>
         </span>
-        <span id="w_353_0" class="ocr_word" title="bbox 1599 2845 1655 2880">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">P</ins>
-          </span>
-        </span>
         <span id="w_353_1" class="ocr_word" title="bbox 1599 2845 1655 2880">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">3.</ins>
+            <ins class="alt" title="nlp 2.00">P3.</ins>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 1738 2848 1759 2879">
@@ -2037,8 +2031,7 @@
         </span>
         <span id="w_358" class="ocr_word" title="bbox 363 2901 420 2936">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’.</ins>
-            <del title="nlp 0.90">’.</del>
+            <ins title="nlp 2.00">P1.</ins>
           </span>
         </span>
         <span id="w_359" class="ocr_word" title="bbox 568 2904 611 2936">
@@ -2174,12 +2167,12 @@
         </span>
         <span id="w_382" class="ocr_word" title="bbox 699 3007 723 3043">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1.</ins>
+            <ins title="nlp 2.00">l.</ins>
           </span>
         </span>
         <span id="w_383" class="ocr_word" title="bbox 744 3008 767 3043">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1.</ins>
+            <ins title="nlp 2.00">l.</ins>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 778 3023 786 3051">
@@ -2195,8 +2188,7 @@
         </span>
         <span id="w_386" class="ocr_word" title="bbox 1022 3007 1103 3053">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ipee</ins>
-            <del title="nlp 0.90">ipee</del>
+            <ins title="nlp 2.00">ipse</ins>
           </span>
         </span>
         <span id="w_387" class="ocr_word" title="bbox 1129 3006 1270 3043">
@@ -2215,15 +2207,9 @@
             <ins class="alt" title="nlp 1.00">συνακτικὴν</ins>
           </span>
         </span>
-        <span id="w_390" class="ocr_word" title="bbox 1633 3002 1719 3041">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dedi</ins>
-            <del title="nlp 0.90">dedi</del>
-          </span>
-        </span>
         <span id="w_391" class="ocr_word" title="bbox 1732 3035 1740 3049">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">dedi,</ins>
           </span>
         </span>
         <span id="w_392" class="ocr_word" title="bbox 1766 3005 1997 3049" lang="grc">
@@ -2430,7 +2416,7 @@
         </span>
         <span id="w_427" class="ocr_word" title="bbox 1641 3170 1720 3206">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">642.</ins>
+            <ins title="nlp 2.00">542.</ins>
           </span>
         </span>
         <span id="w_428" class="ocr_word" title="bbox 1749 3170 1829 3204">
