--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0094.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0094.html
@@ -48,8 +48,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 812 308 896 349">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iiat.</ins>
-            <del title="nlp 0.90">iiat.</del>
+            <ins title="nlp 2.00">nat.</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 930 307 1042 349">
@@ -103,8 +102,7 @@
       <span class="ocr_line" title="bbox 301 378 2041 433">
         <span id="w_15" class="ocr_word" title="bbox 301 383 347 422">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xd</ins>
-            <del title="nlp 0.90">xd</del>
+            <ins title="nlp 2.00">ut</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 376 393 468 421">
@@ -133,8 +131,7 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 928 379 1199 432">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">artifidosum</ins>
-            <del title="nlp 0.90">artifidosum</del>
+            <ins title="nlp 2.00">artificiosum</ins>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1230 378 1289 420">
@@ -232,8 +229,7 @@
       <span class="ocr_line" title="bbox 303 520 2043 575">
         <span id="w_36" class="ocr_word" title="bbox 303 521 491 575">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">operihus</ins>
-            <del title="nlp 0.90">operihus</del>
+            <ins title="nlp 2.00">operibus</ins>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 515 525 753 565">
@@ -255,8 +251,7 @@
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1136 521 1301 575">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">effixnat,</ins>
-            <del title="nlp 0.90">effixnat,</del>
+            <ins title="nlp 2.00">efficiat,</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1327 521 1376 563">
@@ -385,8 +380,7 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1140 663 1341 706">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">statuehat</ins>
-            <del title="nlp 0.90">statuehat</del>
+            <ins title="nlp 2.00">statuebat</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1379 664 1514 717">
@@ -491,8 +485,7 @@
       <span class="ocr_line" title="bbox 305 805 1957 862">
         <span id="w_81" class="ocr_word" title="bbox 305 806 480 848">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TertuU.</ins>
-            <del title="nlp 0.90">TertuU.</del>
+            <ins title="nlp 2.00">Tertull.</ins>
           </span>
         </span>
         <span id="w_82" class="ocr_word" title="bbox 514 806 577 848">
@@ -509,7 +502,7 @@
         </span>
         <span id="w_84" class="ocr_word" title="bbox 722 805 764 848">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 791 807 828 848">
@@ -568,8 +561,7 @@
         </span>
         <span id="w_94" class="ocr_word" title="bbox 668 878 806 920">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_95" class="ocr_word" title="bbox 827 877 911 920">
@@ -684,8 +676,7 @@
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1260 1020 1395 1075">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">AtqUfC</ins>
-            <del title="nlp 0.90">AtqUfC</del>
+            <ins title="nlp 2.00">Atque</ins>
           </span>
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1424 1019 1503 1061">
@@ -739,8 +730,7 @@
         </span>
         <span id="w_124" class="ocr_word" title="bbox 984 1092 1102 1134">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Jiahet</ins>
-            <del title="nlp 0.90">Jiahet</del>
+            <ins title="nlp 2.00">habet</ins>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1131 1093 1254 1146">
@@ -856,8 +846,7 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 448 1238 605 1277">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">natwra</ins>
-            <del title="nlp 0.90">natwra</del>
+            <ins title="nlp 2.00">natura</ins>
           </span>
         </span>
         <span id="w_144" class="ocr_word" title="bbox 635 1249 719 1277">
@@ -963,17 +952,11 @@
         </span>
         <span id="w_161" class="ocr_word" title="bbox 1975 1303 2052 1346">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">At-</ins>
+            <ins title="nlp 2.00">Atque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 306 1377 2052 1433">
-        <span id="w_162" class="ocr_word" title="bbox 306 1392 383 1433">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">Atque</del>
-          </span>
-        </span>
         <span id="w_163" class="ocr_word" title="bbox 400 1382 447 1421">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ut</ins>
@@ -986,9 +969,14 @@
             <del title="nlp 0.90">ceterae</del>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 644 1381 822 1421">
+        <span id="w_165_0" class="ocr_word" title="bbox 644 1381 822 1421">
           <span class="alternatives">
-            <ins title="nlp 2.00">suis</ins>
+            <ins class="alt" title="nlp 2.00">naturae</ins>
+          </span>
+        </span>
+        <span id="w_165_1" class="ocr_word" title="bbox 644 1381 822 1421">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 845 1379 934 1421">
@@ -999,8 +987,7 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 964 1378 1190 1421">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">seminihus</ins>
-            <del title="nlp 0.90">seminihus</del>
+            <ins title="nlp 2.00">seminibus</ins>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 1219 1391 1400 1432">
@@ -1017,23 +1004,11 @@
         </span>
         <span id="w_170" class="ocr_word" title="bbox 1698 1379 1929 1431">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">augesGunt,</ins>
-            <del title="nlp 0.90">augesGunt,</del>
-          </span>
-        </span>
-        <span id="w_171" class="ocr_word" title="bbox 1961 1388 2052 1417">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">con-</ins>
+            <ins title="nlp 2.00">augescunt,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 307 1448 2054 1501">
-        <span id="w_172" class="ocr_word" title="bbox 307 1451 501 1501">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tinentwr,</ins>
-            <del title="nlp 0.90">continentwr,</del>
-          </span>
-        </span>
         <span id="w_173" class="ocr_word" title="bbox 532 1451 592 1492">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sic</ins>
@@ -1066,8 +1041,7 @@
         </span>
         <span id="w_178" class="ocr_word" title="bbox 1317 1449 1436 1491">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hahet</ins>
-            <del title="nlp 0.90">hahet</del>
+            <ins title="nlp 2.00">habet</ins>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 1464 1448 1719 1491">
@@ -1152,8 +1126,7 @@
       <span class="ocr_line" title="bbox 308 1590 2055 1648">
         <span id="w_192" class="ocr_word" title="bbox 308 1592 488 1645">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">adhihet,</ins>
-            <del title="nlp 0.90">adhihet,</del>
+            <ins title="nlp 2.00">adhibet,</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 519 1596 565 1635">
@@ -1212,8 +1185,7 @@
         </span>
         <span id="w_202" class="ocr_word" title="bbox 1926 1590 2055 1644">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">igitwr</ins>
-            <del title="nlp 0.90">igitwr</del>
+            <ins title="nlp 2.00">igitur</ins>
           </span>
         </span>
       </span>
@@ -1603,8 +1575,7 @@
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1828 2018 1906 2061">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iUa</ins>
-            <del title="nlp 0.90">iUa</del>
+            <ins title="nlp 2.00">illa</ins>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 1949 2017 2054 2073">
@@ -1715,8 +1686,7 @@
         </span>
         <span id="w_286" class="ocr_word" title="bbox 807 2238 944 2280">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_287" class="ocr_word" title="bbox 972 2237 1056 2280">
@@ -1864,8 +1834,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 801 2453 938 2496">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 960 2451 1045 2495">
@@ -1983,7 +1952,7 @@
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1945 2521 2057 2575" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔστι</ins>
+            <ins title="nlp 2.00">(ἔστι</ins>
           </span>
         </span>
       </span>
@@ -2069,8 +2038,7 @@
         </span>
         <span id="w_354" class="ocr_word" title="bbox 562 2738 713 2782">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Αëtius</ins>
           </span>
         </span>
         <span id="w_355" class="ocr_word" title="bbox 744 2738 765 2782">
@@ -2145,7 +2113,7 @@
         </span>
         <span id="w_368" class="ocr_word" title="bbox 721 2809 820 2867" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
+            <ins title="nlp 2.00">(τὴν</ins>
           </span>
         </span>
         <span id="w_369" class="ocr_word" title="bbox 851 2808 1137 2867" lang="grc">
@@ -2245,8 +2213,7 @@
         </span>
         <span id="w_387" class="ocr_word" title="bbox 682 2952 824 2997">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Gb-aec.</ins>
-            <del title="nlp 0.90">Gb-aec.</del>
+            <ins title="nlp 2.00">Graec.</ins>
           </span>
         </span>
         <span id="w_388" class="ocr_word" title="bbox 849 2952 933 2996" lang="grc">
@@ -2391,14 +2358,9 @@
             <del title="nlp 0.90">corr.</del>
           </span>
         </span>
-        <span id="w_414_0" class="ocr_word" title="bbox 2000 3115 2057 3151">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">P</ins>
-          </span>
-        </span>
         <span id="w_414_1" class="ocr_word" title="bbox 2000 3115 2057 3151">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">1.</ins>
+            <ins class="alt" title="nlp 2.00">P1.</ins>
           </span>
         </span>
       </span>
