--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0095.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0095.html
@@ -158,8 +158,7 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1081 494 1143 539">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lU</ins>
-            <del title="nlp 0.90">lU</del>
+            <ins title="nlp 2.00">III</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1169 496 1209 552" lang="grc">
@@ -205,9 +204,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 564 1989 625">
-        <span id="w_35" class="ocr_word" title="bbox 208 564 258 610" lang="grc">
+        <span id="w_35_0" class="ocr_word" title="bbox 208 564 258 610">
           <span class="alternatives">
-            <ins title="nlp 2.00">εὲ</ins>
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
+          </span>
+        </span>
+        <span id="w_35_1" class="ocr_word" title="bbox 208 564 258 610">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_36" class="ocr_word" title="bbox 283 568 423 618" lang="grc">
@@ -227,13 +231,12 @@
         </span>
         <span id="w_39" class="ocr_word" title="bbox 862 574 922 622">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Jtfj</ins>
-            <del title="nlp 0.90">Jtfj</del>
+            <ins title="nlp 2.00">πῇ</ins>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 947 565 1028 623" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὶν</ins>
+            <ins title="nlp 2.00">μὲν</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1061 567 1117 622" lang="grc">
@@ -248,8 +251,7 @@
         </span>
         <span id="w_43" class="ocr_word" title="bbox 1307 574 1367 623">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nf]</ins>
-            <del title="nlp 0.90">nf</del>
+            <ins title="nlp 2.00">πῇ</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1394 566 1440 611" lang="grc">
@@ -275,11 +277,6 @@
         <span id="w_48_0" class="ocr_word" title="bbox 1829 585 1951 611">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">τουτέστι</ins>
-          </span>
-        </span>
-        <span id="w_48_1" class="ocr_word" title="bbox 1829 585 1951 611">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -368,8 +365,7 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 699 1041 836 1085">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 858 1041 940 1084">
@@ -631,9 +627,14 @@
             <ins class="alt" title="nlp 1.00">ἀποτροπῶν·</ins>
           </span>
         </span>
-        <span id="w_117" class="ocr_word" title="bbox 915 1325 1027 1383" lang="grc">
+        <span id="w_117_0" class="ocr_word" title="bbox 915 1325 1027 1383">
           <span class="alternatives">
-            <ins title="nlp 2.00">[καὶ]</ins>
+            <ins class="alt" title="nlp 2.00">[καὶ]</ins>
+          </span>
+        </span>
+        <span id="w_117_1" class="ocr_word" title="bbox 915 1325 1027 1383">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1060 1343 1175 1370" lang="grc">
@@ -659,11 +660,6 @@
         <span id="w_122" class="ocr_word" title="bbox 1717 1328 1818 1382" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
-          </span>
-        </span>
-        <span id="w_123" class="ocr_word" title="bbox 1844 1330 1959 1382" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Χρύσιππον</ins>
           </span>
         </span>
       </span>
@@ -983,8 +979,7 @@
         </span>
         <span id="w_181" class="ocr_word" title="bbox 1035 1888 1169 1931">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yitam</ins>
-            <del title="nlp 0.90">yitam</del>
+            <ins title="nlp 2.00">vitam</ins>
           </span>
         </span>
         <span id="w_182" class="ocr_word" title="bbox 1201 1888 1369 1930">
@@ -999,19 +994,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_184" class="ocr_word" title="bbox 1469 1887 1551 1930">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">187</ins>
-          </span>
-        </span>
-        <span id="w_185" class="ocr_word" title="bbox 1555 1912 1614 1918">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
         <span id="w_186" class="ocr_word" title="bbox 1618 1887 1714 1930">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">189.</ins>
+            <ins class="alt" title="nlp 2.00">187—189.</ins>
           </span>
         </span>
       </span>
@@ -1029,8 +1014,7 @@
         </span>
         <span id="w_189" class="ocr_word" title="bbox 713 1984 850 2027">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_190" class="ocr_word" title="bbox 878 1982 961 2026">
@@ -1069,10 +1053,14 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 1897 1987 2019 2030">
+        <span id="w_197_0" class="ocr_word" title="bbox 1897 1987 2019 2030">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tcJso</ins>
-            <del title="nlp 0.90">tcJso</del>
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
+          </span>
+        </span>
+        <span id="w_197_1" class="ocr_word" title="bbox 1897 1987 2019 2030">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1210,7 +1198,7 @@
         </span>
         <span id="w_223" class="ocr_word" title="bbox 669 2197 712 2241">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">ΙΙ</ins>
           </span>
         </span>
         <span id="w_224" class="ocr_word" title="bbox 744 2214 782 2254" lang="grc">
@@ -1278,7 +1266,7 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 450 2271 528 2325" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">„τὸ</ins>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 561 2269 928 2326" lang="grc">
@@ -1438,21 +1426,14 @@
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1836 2412 1969 2454">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">deda-</ins>
+            <ins title="nlp 2.00">declarantem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 219 2483 1968 2540">
-        <span id="w_269" class="ocr_word" title="bbox 219 2488 382 2528">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rcmiem</ins>
-            <del title="nlp 0.90">dedarcmiem</del>
-          </span>
-        </span>
         <span id="w_270" class="ocr_word" title="bbox 412 2485 531 2537">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iHud,</ins>
-            <del title="nlp 0.90">iHud,</del>
+            <ins title="nlp 2.00">illud,</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 562 2485 672 2540">
@@ -1485,9 +1466,14 @@
             <del title="nlp 0.90">est,</del>
           </span>
         </span>
-        <span id="w_276" class="ocr_word" title="bbox 1100 2485 1379 2527">
+        <span id="w_276_0" class="ocr_word" title="bbox 1100 2485 1379 2527">
           <span class="alternatives">
-            <ins title="nlp 2.00">conuenienter</ins>
+            <ins class="alt" title="nlp 2.00">convenienter</ins>
+          </span>
+        </span>
+        <span id="w_276_1" class="ocr_word" title="bbox 1100 2485 1379 2527">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1408 2487 1586 2527">
@@ -1505,12 +1491,6 @@
         <span id="w_279" class="ocr_word" title="bbox 1787 2509 1839 2514">
           <span class="alternatives">
             <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_280" class="ocr_word" title="bbox 1867 2483 1968 2526">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ibid.</ins>
-            <del title="nlp 0.90">ibid.</del>
           </span>
         </span>
       </span>
@@ -1549,8 +1529,7 @@
         </span>
         <span id="w_287" class="ocr_word" title="bbox 743 2557 903 2608">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">honum,</ins>
-            <del title="nlp 0.90">honum,</del>
+            <ins title="nlp 2.00">bonum,</ins>
           </span>
         </span>
         <span id="w_288" class="ocr_word" title="bbox 923 2557 1033 2611">
@@ -1811,8 +1790,7 @@
         </span>
         <span id="w_331" class="ocr_word" title="bbox 648 2843 797 2885">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">bormm</ins>
-            <del title="nlp 0.90">bormm</del>
+            <ins title="nlp 2.00">bonum</ins>
           </span>
         </span>
         <span id="w_332" class="ocr_word" title="bbox 829 2856 920 2885">
@@ -1823,8 +1801,7 @@
         </span>
         <span id="w_333" class="ocr_word" title="bbox 951 2846 1108 2885">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">naima</ins>
-            <del title="nlp 0.90">naima</del>
+            <ins title="nlp 2.00">natura</ins>
           </span>
         </span>
         <span id="w_334" class="ocr_word" title="bbox 1138 2845 1401 2885">
@@ -2019,20 +1996,19 @@
             <ins class="alt" title="nlp 1.00">12</ins>
           </span>
         </span>
-        <span id="w_370_0" class="ocr_word" title="bbox 1488 3149 1551 3184">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">B</ins>
-          </span>
-        </span>
         <span id="w_370_1" class="ocr_word" title="bbox 1488 3149 1551 3184">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">1.</ins>
+            <ins class="alt" title="nlp 2.00">B1.</ins>
           </span>
         </span>
-        <span id="w_371" class="ocr_word" title="bbox 1577 3160 1649 3185">
+        <span id="w_371_0" class="ocr_word" title="bbox 1577 3160 1649 3185">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">om.</ins>
-            <del title="nlp 0.90">om.</del>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_371_1" class="ocr_word" title="bbox 1577 3160 1649 3185">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1676 3148 1777 3186">
