--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0096.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0096.html
@@ -113,7 +113,7 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 515 382 713 431" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Στωικὸς</ins>
+            <ins title="nlp 2.00">Στωΐκὸς</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 744 380 866 431" lang="grc">
@@ -278,7 +278,7 @@
       <span class="ocr_line" title="bbox 312 605 988 660">
         <span id="w_46" class="ocr_word" title="bbox 312 624 327 650">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
         <span id="w_47" class="ocr_word" title="bbox 347 610 384 647">
@@ -819,7 +819,7 @@
       <span class="ocr_line" title="bbox 294 1352 2090 1410">
         <span id="w_148" class="ocr_word" title="bbox 294 1372 327 1399">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">16</ins>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 469 1353 561 1397">
@@ -1090,8 +1090,7 @@
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1018 1640 1156 1682">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1183 1639 1268 1682">
@@ -1157,7 +1156,7 @@
         </span>
         <span id="w_210" class="ocr_word" title="bbox 467 1722 558 1766">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">186</ins>
+            <ins title="nlp 2.00">185</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 594 1722 740 1766">
@@ -1312,8 +1311,7 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1119 1866 1229 1908">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">heate</ins>
-            <del title="nlp 0.90">heate</del>
+            <ins title="nlp 2.00">beate</ins>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 1258 1866 1424 1920">
@@ -1392,7 +1390,7 @@
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1426 1936 1541 1980">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Cu/r?</ins>
+            <ins title="nlp 2.00">Cur? </ins>
           </span>
         </span>
         <span id="w_250" class="ocr_word" title="bbox 1602 1937 1811 1991">
@@ -1409,16 +1407,14 @@
         </span>
         <span id="w_252" class="ocr_word" title="bbox 1946 1941 2087 1980">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cofUra</ins>
-            <del title="nlp 0.90">cofUra</del>
+            <ins title="nlp 2.00">contra</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 343 2007 2089 2064">
         <span id="w_253" class="ocr_word" title="bbox 343 2013 558 2061">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">natwram,</ins>
-            <del title="nlp 0.90">natwram,</del>
+            <ins title="nlp 2.00">naturam,</ins>
           </span>
         </span>
         <span id="w_254" class="ocr_word" title="bbox 610 2009 783 2064">
@@ -1534,8 +1530,7 @@
         </span>
         <span id="w_273" class="ocr_word" title="bbox 1508 2079 1666 2122">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mcdum</ins>
-            <del title="nlp 0.90">mcdum</del>
+            <ins title="nlp 2.00">malum</ins>
           </span>
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1704 2080 1873 2122">
@@ -1565,8 +1560,7 @@
         </span>
         <span id="w_278" class="ocr_word" title="bbox 432 2151 475 2194">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">n</ins>
-            <del title="nlp 0.90">n</del>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_279" class="ocr_word" title="bbox 503 2151 568 2194">
@@ -1937,8 +1931,7 @@
         </span>
         <span id="w_342" class="ocr_word" title="bbox 833 2664 968 2706">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_343" class="ocr_word" title="bbox 995 2663 1078 2706">
@@ -2019,7 +2012,7 @@
       <span class="ocr_line" title="bbox 291 2803 2083 2861">
         <span id="w_357" class="ocr_word" title="bbox 291 2825 324 2852">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">85</ins>
+            <ins title="nlp 2.00">35</ins>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 465 2806 548 2850">
@@ -2089,8 +2082,7 @@
         </span>
         <span id="w_369" class="ocr_word" title="bbox 1921 2803 2083 2847">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oracuh</ins>
-            <del title="nlp 0.90">oracuh</del>
+            <ins title="nlp 2.00">oraculo</ins>
           </span>
         </span>
       </span>
@@ -2114,8 +2106,7 @@
         </span>
         <span id="w_373" class="ocr_word" title="bbox 812 2878 908 2921">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hene</ins>
-            <del title="nlp 0.90">hene</del>
+            <ins title="nlp 2.00">bene</ins>
           </span>
         </span>
         <span id="w_374" class="ocr_word" title="bbox 936 2879 1156 2921">
@@ -2142,9 +2133,14 @@
             <del title="nlp 0.90">contenta</del>
           </span>
         </span>
-        <span id="w_378" class="ocr_word" title="bbox 1626 2878 1718 2920">
+        <span id="w_378_0" class="ocr_word" title="bbox 1626 2878 1718 2920">
           <span class="alternatives">
-            <ins title="nlp 2.00">est.“</ins>
+            <ins class="alt" title="nlp 2.00">est.“</ins>
+          </span>
+        </span>
+        <span id="w_378_1" class="ocr_word" title="bbox 1626 2878 1718 2920">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_379" class="ocr_word" title="bbox 1761 2902 1818 2906">
@@ -2156,12 +2152,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Cf</ins>
             <del title="nlp 0.90">Cf</del>
-          </span>
-        </span>
-        <span id="w_381" class="ocr_word" title="bbox 1952 2875 2081 2918">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Acad.</ins>
-            <del title="nlp 0.90">Acad.</del>
           </span>
         </span>
       </span>
@@ -2241,8 +2231,7 @@
         </span>
         <span id="w_395" class="ocr_word" title="bbox 2023 2947 2083 2989">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ihi</ins>
-            <del title="nlp 0.90">ihi</del>
+            <ins title="nlp 2.00">ibi</ins>
           </span>
         </span>
       </span>
@@ -2261,8 +2250,7 @@
         </span>
         <span id="w_398" class="ocr_word" title="bbox 761 3021 918 3063">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">heatam</ins>
-            <del title="nlp 0.90">heatam</del>
+            <ins title="nlp 2.00">beatam</ins>
           </span>
         </span>
         <span id="w_399" class="ocr_word" title="bbox 945 3021 1087 3072">
@@ -2290,8 +2278,7 @@
         </span>
         <span id="w_403" class="ocr_word" title="bbox 1556 3019 1766 3062">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ddectavit</ins>
-            <del title="nlp 0.90">ddectavit</del>
+            <ins title="nlp 2.00">delectavit</ins>
           </span>
         </span>
         <span id="w_404" class="ocr_word" title="bbox 1790 3052 1799 3060">
