--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0098.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0098.html
@@ -457,14 +457,14 @@
             <ins class="alt" title="nlp 1.00">ἀδιάφορον</ins>
           </span>
         </span>
-        <span id="w_83" class="ocr_word" title="bbox 1773 809 1881 862">
+        <span id="w_83_0" class="ocr_word" title="bbox 1773 809 1881 862">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὄν&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὂν&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1914 807 2082 862" lang="grc">
+        <span id="w_83_1" class="ocr_word" title="bbox 1773 809 1881 862">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐκλεγόμεθα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1017,17 +1017,11 @@
         </span>
         <span id="w_195" class="ocr_word" title="bbox 2019 1531 2087 1561">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">su-</ins>
+            <ins title="nlp 2.00">sumenda</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 343 1588 2085 1644">
-        <span id="w_196" class="ocr_word" title="bbox 343 1589 495 1630">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">menda</ins>
-            <del title="nlp 0.90">sumenda</del>
-          </span>
-        </span>
         <span id="w_197" class="ocr_word" title="bbox 525 1602 574 1631">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ex</ins>
@@ -1092,7 +1086,7 @@
       <span class="ocr_line" title="bbox 290 1659 1642 1714">
         <span id="w_207" class="ocr_word" title="bbox 290 1681 325 1706">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30</ins>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 343 1674 392 1702">
@@ -1109,8 +1103,7 @@
         </span>
         <span id="w_210" class="ocr_word" title="bbox 689 1659 933 1714">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">appellahat,</ins>
-            <del title="nlp 0.90">appellahat,</del>
+            <ins title="nlp 2.00">appellabat,</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 964 1661 1112 1702">
@@ -1205,8 +1198,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1916 1730 2089 1786">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fadUus</ins>
-            <del title="nlp 0.90">fadUus</del>
+            <ins title="nlp 2.00">facilius</ins>
           </span>
         </span>
       </span>
@@ -1219,8 +1211,7 @@
         </span>
         <span id="w_228" class="ocr_word" title="bbox 436 1803 548 1845">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">verhi</ins>
-            <del title="nlp 0.90">verhi</del>
+            <ins title="nlp 2.00">verbi</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 852 1836 862 1854">
@@ -1567,8 +1558,7 @@
         </span>
         <span id="w_291" class="ocr_word" title="bbox 895 2160 1084 2212">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ohtinent,</ins>
-            <del title="nlp 0.90">ohtinent,</del>
+            <ins title="nlp 2.00">obtinent,</ins>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1115 2158 1384 2216" lang="grc">
@@ -1596,8 +1586,7 @@
         </span>
         <span id="w_296" class="ocr_word" title="bbox 1813 2160 2087 2202">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nominentwr.</ins>
-            <del title="nlp 0.90">nominentwr.</del>
+            <ins title="nlp 2.00">nominentur.</ins>
           </span>
         </span>
       </span>
@@ -1857,8 +1846,7 @@
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1347 2517 1529 2572">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">gUmosa</ins>
-            <del title="nlp 0.90">gUmosa</del>
+            <ins title="nlp 2.00">gloriosa</ins>
           </span>
         </span>
         <span id="w_341" class="ocr_word" title="bbox 1559 2520 1638 2568">
@@ -1892,17 +1880,16 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 347 2590 542 2633">
-        <span id="w_346" class="ocr_word" title="bbox 347 2590 542 2633">
+        <span id="w_346_0" class="ocr_word" title="bbox 347 2590 542 2633">
           <span class="alternatives">
-            <ins title="nlp 2.00">malum.“</ins>
+            <ins class="alt" title="nlp 2.00">malum.“</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 838 2731 1597 2786">
         <span id="w_347" class="ocr_word" title="bbox 838 2731 920 2777">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lY.</ins>
-            <del title="nlp 0.90">lY.</del>
+            <ins title="nlp 2.00">IV.</ins>
           </span>
         </span>
         <span id="w_348" class="ocr_word" title="bbox 957 2731 1026 2775">
@@ -1927,7 +1914,7 @@
       <span class="ocr_line" title="bbox 293 2801 1379 2849">
         <span id="w_351" class="ocr_word" title="bbox 293 2823 327 2849">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">85</ins>
+            <ins title="nlp 2.00">35</ins>
           </span>
         </span>
         <span id="w_352" class="ocr_word" title="bbox 1059 2802 1155 2848">
@@ -1938,8 +1925,7 @@
         </span>
         <span id="w_353" class="ocr_word" title="bbox 1175 2801 1227 2836">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ni</ins>
-            <del title="nlp 0.90">ni</del>
+            <ins title="nlp 2.00">III</ins>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 1252 2814 1286 2847">
@@ -2042,9 +2028,7 @@
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1373 2948 1593 2989" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">οΙκείωσιν</ins>
-            <del title="nlp 0.90">οἰκείωσιν</del>
-            <del title="nlp 0.89">οἰκείωσίν</del>
+            <ins title="nlp 2.00">οἰκείωσιν</ins>
           </span>
         </span>
         <span id="w_373" class="ocr_word" title="bbox 1626 2945 1765 3001" lang="grc">
