--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0099.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0099.html
@@ -315,8 +315,7 @@
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1273 645 1409 684">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">atUem</ins>
-            <del title="nlp 0.90">atUem</del>
+            <ins title="nlp 2.00">autem</ins>
           </span>
         </span>
         <span id="w_55" class="ocr_word" title="bbox 1436 642 1608 696">
@@ -417,8 +416,7 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1026 786 1354 840">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">progredicntcm</ins>
-            <del title="nlp 0.90">progredicntcm</del>
+            <ins title="nlp 2.00">progredientem</ins>
           </span>
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1394 785 1541 836" lang="grc">
@@ -597,8 +595,7 @@
         </span>
         <span id="w_103" class="ocr_word" title="bbox 697 1001 764 1044">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Uli</ins>
-            <del title="nlp 0.90">Uli</del>
+            <ins title="nlp 2.00">illi</ins>
           </span>
         </span>
         <span id="w_104" class="ocr_word" title="bbox 793 1005 1013 1054">
@@ -701,8 +698,7 @@
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1112 1358 1295 1415">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ckimque</ins>
-            <del title="nlp 0.90">Ckimque</del>
+            <ins title="nlp 2.00">Cumque</ins>
           </span>
         </span>
         <span id="w_121" class="ocr_word" title="bbox 1322 1361 1552 1415">
@@ -725,17 +721,11 @@
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1886 1359 1971 1403">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vir-</ins>
+            <ins title="nlp 2.00">virturem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 222 1432 2023 1487">
-        <span id="w_125" class="ocr_word" title="bbox 222 1440 345 1479">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tutem</ins>
-            <del title="nlp 0.90">virtutem</del>
-          </span>
-        </span>
         <span id="w_126" class="ocr_word" title="bbox 377 1437 424 1478">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">in</ins>
@@ -780,8 +770,7 @@
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1556 1436 1713 1476">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">natwra</ins>
-            <del title="nlp 0.90">natwra</del>
+            <ins title="nlp 2.00">natura</ins>
           </span>
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1750 1436 1824 1475">
@@ -914,8 +903,7 @@
         </span>
         <span id="w_155" class="ocr_word" title="bbox 1440 1575 1761 1628">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">arhitrarentur,</ins>
-            <del title="nlp 0.90">arhitrarentur,</del>
+            <ins title="nlp 2.00">arbitrarentur,</ins>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 1804 1576 1871 1618">
@@ -926,8 +914,7 @@
         </span>
         <span id="w_157" class="ocr_word" title="bbox 1899 1587 1974 1618">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nee</ins>
-            <del title="nlp 0.90">nee</del>
+            <ins title="nlp 2.00">nec</ins>
           </span>
         </span>
       </span>
@@ -938,9 +925,14 @@
             <del title="nlp 0.90">id</del>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 287 1651 371 1694" lang="grc">
+        <span id="w_159_0" class="ocr_word" title="bbox 287 1651 371 1694">
           <span class="alternatives">
-            <ins title="nlp 2.00">id</ins>
+            <ins class="alt" title="nlp 2.00">ullo</ins>
+          </span>
+        </span>
+        <span id="w_159_1" class="ocr_word" title="bbox 287 1651 371 1694">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 391 1651 509 1693">
@@ -994,12 +986,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ut</ins>
             <del title="nlp 0.90">ut</del>
-          </span>
-        </span>
-        <span id="w_169" class="ocr_word" title="bbox 1732 1648 1972 1703">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">superiores,</ins>
-            <del title="nlp 0.90">superiores,</del>
           </span>
         </span>
       </span>
@@ -1103,8 +1089,7 @@
         </span>
         <span id="w_186" class="ocr_word" title="bbox 1991 1811 2026 1838">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lo</ins>
-            <del title="nlp 0.90">lo</del>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1342,9 +1327,14 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_233" class="ocr_word" title="bbox 1155 2149 1509 2207" lang="grc">
+        <span id="w_233_0" class="ocr_word" title="bbox 1155 2149 1509 2207">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;ὑπομενετέοις·</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὑπομενετέοις·</ins>
+          </span>
+        </span>
+        <span id="w_233_1" class="ocr_word" title="bbox 1155 2149 1509 2207">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_234" class="ocr_word" title="bbox 1543 2151 1624 2206" lang="grc">
@@ -1362,11 +1352,6 @@
             <ins title="nlp 2.00">. . . . . . . . .</ins>
           </span>
         </span>
-        <span id="w_237" class="ocr_word" title="bbox 1992 2169 2026 2197">
-          <span class="alternatives">
-            <ins title="nlp 2.00">25</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 227 2220 1972 2283">
         <span id="w_238" class="ocr_word" title="bbox 227 2228 447 2283" lang="grc">
@@ -1379,9 +1364,14 @@
             <ins title="nlp 2.00">ἐν〉</ins>
           </span>
         </span>
-        <span id="w_240" class="ocr_word" title="bbox 587 2223 878 2282" lang="grc">
+        <span id="w_240_0" class="ocr_word" title="bbox 587 2223 878 2282">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐνεργητἐοις ·</ins>
+            <ins class="alt" title="nlp 2.00">ἐνεργητέοις·</ins>
+          </span>
+        </span>
+        <span id="w_240_1" class="ocr_word" title="bbox 587 2223 878 2282">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_241" class="ocr_word" title="bbox 910 2240 992 2279" lang="grc">
@@ -1407,11 +1397,6 @@
         <span id="w_245" class="ocr_word" title="bbox 1676 2221 1725 2266" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
-          </span>
-        </span>
-        <span id="w_246" class="ocr_word" title="bbox 1756 2222 1972 2278" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀπονεμητέοις·</ins>
           </span>
         </span>
       </span>
@@ -1506,14 +1491,17 @@
         </span>
         <span id="w_265" class="ocr_word" title="bbox 1455 2365 1592 2408">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 1620 2364 1703 2408">
+        <span id="w_266_0" class="ocr_word" title="bbox 1620 2364 1703 2408">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">VII</ins>
-            <del title="nlp 0.90">VII</del>
+            <ins class="alt" title="nlp 2.00">VII</ins>
+          </span>
+        </span>
+        <span id="w_266_1" class="ocr_word" title="bbox 1620 2364 1703 2408">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">161.</ins>
           </span>
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1732 2366 1826 2408" lang="grc">
@@ -1660,9 +1648,9 @@
             <ins class="alt" title="nlp 2.00">Ζήνων</ins>
           </span>
         </span>
-        <span id="w_293_1" class="ocr_word" title="bbox 1793 2510 2026 2565">
+        <span id="w_293_1_0" class="ocr_word" title="bbox 1793 2510 2026 2565">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">50</ins>
+            <ins class="alt" title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
@@ -1759,9 +1747,14 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_312" class="ocr_word" title="bbox 1807 2651 1975 2695" lang="grc">
+        <span id="w_312_0" class="ocr_word" title="bbox 1807 2651 1975 2695">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ’ ὑπομενετέοις</ins>
+            <ins class="alt" title="nlp 2.00">δ᾿</ins>
+          </span>
+        </span>
+        <span id="w_312_1" class="ocr_word" title="bbox 1807 2651 1975 2695">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὑπομενετέοις</ins>
           </span>
         </span>
       </span>
@@ -1842,8 +1835,7 @@
         </span>
         <span id="w_329" class="ocr_word" title="bbox 476 2872 732 2916">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">PlutarchuB</ins>
-            <del title="nlp 0.90">PlutarchuB</del>
+            <ins title="nlp 2.00">Plutarchus</ins>
           </span>
         </span>
         <span id="w_330" class="ocr_word" title="bbox 776 2871 826 2913">
@@ -1909,8 +1901,7 @@
         </span>
         <span id="w_341" class="ocr_word" title="bbox 1995 2886 2030 2912">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sa</ins>
-            <del title="nlp 0.90">sa</del>
+            <ins title="nlp 2.00">35</ins>
           </span>
         </span>
       </span>
@@ -1974,12 +1965,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 232 3056 1979 3112">
-        <span id="w_352" class="ocr_word" title="bbox 232 3065 343 3112">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">plevi,</ins>
-            <del title="nlp 0.90">supplevi,</del>
-          </span>
-        </span>
         <span id="w_353" class="ocr_word" title="bbox 369 3066 518 3101">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">secutus</ins>
@@ -2087,8 +2072,7 @@
         </span>
         <span id="w_371" class="ocr_word" title="bbox 1209 3111 1316 3158">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">potoi</ins>
-            <del title="nlp 0.90">potoi</del>
+            <ins title="nlp 2.00">potui</ins>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1342 3111 1526 3157">
@@ -2117,14 +2101,14 @@
         </span>
         <span id="w_376" class="ocr_word" title="bbox 1896 3114 1975 3146">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">668.</ins>
+            <ins title="nlp 2.00">563.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 235 3168 877 3217">
         <span id="w_377" class="ocr_word" title="bbox 235 3177 278 3209">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">82</ins>
+            <ins title="nlp 2.00">32</ins>
           </span>
         </span>
         <span id="w_378" class="ocr_word" title="bbox 305 3172 526 3217" lang="grc">
